RESOLVED FIXED319237
[JSC] `Array#indexOf` / `includes` should not take the slow path for rope elements with mismatched length
https://bugs.webkit.org/show_bug.cgi?id=319237
Summary [JSC] `Array#indexOf` / `includes` should not take the slow path for rope ele...
Sosuke Suzuki
Reported 2026-07-13 01:39:19 PDT
...
Attachments
Sosuke Suzuki
Comment 1 2026-07-13 01:45:15 PDT
EWS
Comment 2 2026-07-18 07:12:41 PDT
Committed 317465@main (a84e1b469405): <https://commits.webkit.org/317465@main> Reviewed commits have been landed. Closing PR #69246 and removing active labels.
Ryan Haddad
Comment 3 2026-08-04 12:33:16 PDT
Note You need to log in before you can comment on or make changes to this bug.